// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseConfig doesnt throw errors if required is off 1`] = `
Object {
  "headerPrefix": undefined,
  "privateKey": "Private",
  "publicKey": undefined,
}
`;

exports[`parseConfig parses config values from any source 1`] = `
Object {
  "headerPrefix": "Prefix",
  "privateKey": "Private",
  "publicKey": "Public",
}
`;

exports[`parseConfig throws an error if a required field is missing 1`] = `
"Missing value for required field 'headerPrefix'/'HEADER_PREFIX'
Missing value for required field 'publicKey'/'PUBLIC_KEY'"
`;
